--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </form>
         </div>
         <ul>
-            <li class="item first"><a href="recipes/lasagna.html">1. Lasagna :</a></li>
+            <li class="item first"><a href="lasagna.html">1. Lasagna :</a></li>
             <p class="item first para1">
                 <img src="recipes/lasagna.jpeg" alt="lasagna" class="img">
         
@@ -32,14 +32,14 @@
                 
 
             </p>
-            <li class="item second"><a href="recipes/instant-pot-chicken-and-dumpling.html">2. Instant pot chicken and dumplings :</a></li>
+            <li class="item second"><a href="instant-pot-chicken-and-dumpling.html">2. Instant pot chicken and dumplings :</a></li>
             <p class="item first para1">
                 <img src="recipes/ipc-and-dumplings.jpg" alt="instant pot chicken" class="img">
                 Instant Pot Chicken and Dumplings is full of tender chicken and
                  vegetables with easy homemade dumplings. One of the best 
                  Instant Pot dinner recipes!
             </p>
-            <li class="item third"><a href="recipes/Baked-kale-chips.html">3. Baked kale Chips :</a></li>
+            <li class="item third"><a href="Baked-kale-chips.html">3. Baked kale Chips :</a></li>
             <p class="item first para1">
                 <img src="recipes/kalechips.jpeg" alt="lasagna" class="img">
                 These crispy oven-baked kale chips are a great homemade snack. 
